AODA fixups: contrast, landmarks and ARIA

--- a/css/colourBlocks.css
+++ b/css/colourBlocks.css
@@ -211,7 +211,7 @@ Version: 1.0
 }
 
 .yellow {
-  background-color: #b69000;
+  background-color: #8F7200;
 }
 
 .dark-purple {
